base/projects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-projects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-projects
  template:
    metadata:
      labels:
        app: ms-projects
    spec:
      imagePullSecrets:
      - name: oci-registry
      containers:
        - name: ms-projects
          image: iad.ocir.io/idwwmbyiyhww/meta-ms-projects:latest
          ports:
            - containerPort: 3000
              protocol: TCP
